Regression: Eevee bad performance when using procedural bump map. #98989

Closed
opened 2022-06-19 16:21:21 +02:00 by Thilo Mack · 41 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.2

Caused by 80859a6cb2

Steps to reproduce
#98989.blend

  • Open file
  • Play animation
    Blender 3.2 will play at ~4x slower framerate than 3.1.2

In addition i am seeing even worse performance when navigating (not reproducible by @iss).

Performance also influence compile times and RAM usage during compilation on AMD GPUs.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.2 Caused by 80859a6cb2 **Steps to reproduce** [#98989.blend](https://archive.blender.org/developer/F13221734/T98989.blend) - Open file - Play animation Blender 3.2 will play at ~4x slower framerate than 3.1.2 In addition i am seeing even worse performance when navigating (not reproducible by @iss). Performance also influence compile times and RAM usage during compilation on AMD GPUs.
Author

Added subscriber: @thilo.mack

Added subscriber: @thilo.mack

#99120 was marked as duplicate of this issue

#99120 was marked as duplicate of this issue

#98865 was marked as duplicate of this issue

#98865 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report. When does the performance drop occur? When you orbit in viewport? When transforming or editing the object?

Could you please clarify the reproducing steps?

Thanks for the report. When does the performance drop occur? When you orbit in viewport? When transforming or editing the object? Could you please clarify the reproducing steps?
Member

Maybe same as #98865

Maybe same as #98865
Author

I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow.
It does get better when i zoom way out. It looks like it depends on how much screen area is occupied by the object.

The fps numbers are from starting the anim player. It's a static scene without any keyframes. But i knew it would give me the fps.
The viewport feels sluggish with or without the animation playing.

About #98865:
I opened up the scene in 3.1.2 and 3.2.0 again to check shader compilation time. I added a new noise texture node and connected it to the base color.
It took about 2-3 seconds in both versions until the viewport updated.
Then i downloaded the the example scene from there and opened it up in both versions.
It behaved pretty much the same as my example for me. No issues compiling the shader, but viewport is really slow in 3.2.0.

Hope that helps!

I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow. It does get better when i zoom way out. It looks like it depends on how much screen area is occupied by the object. The fps numbers are from starting the anim player. It's a static scene without any keyframes. But i knew it would give me the fps. The viewport feels sluggish with or without the animation playing. About #98865: I opened up the scene in 3.1.2 and 3.2.0 again to check shader compilation time. I added a new noise texture node and connected it to the base color. It took about 2-3 seconds in both versions until the viewport updated. Then i downloaded the the example scene from there and opened it up in both versions. It behaved pretty much the same as my example for me. No issues compiling the shader, but viewport is really slow in 3.2.0. Hope that helps!
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow.

Also mentioned in other report. Not sure if it would be appropriate to merge both reports.

> I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow. Also mentioned in other report. Not sure if it would be appropriate to merge both reports.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can confirm performance regression, but not quite when changing orientation in any way.

My steps:
#98989.blend

  • Open file
  • Play animation

Blender 3.2 will play at ~4x slower framerate than 3.1.2

@thilo.mack can you confirm this? Shall I edit report to these steps?

I can confirm performance regression, but not quite when changing orientation in any way. My steps: [#98989.blend](https://archive.blender.org/developer/F13221734/T98989.blend) - Open file - Play animation Blender 3.2 will play at ~4x slower framerate than 3.1.2 @thilo.mack can you confirm this? Shall I edit report to these steps?
Author

In #98989#1378835, @PratikPB2123 wrote:

I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow.

Also mentioned in other report. Not sure if it would be appropriate to merge both reports.

@PratikPB2123 Not sure if that is a question directed at me. I am am fine with whatever helps the development team best.
It does seem related to me.

In #98989#1379199, @iss wrote:
My steps:
#98989.blend

Open file

Play animation

Blender 3.2 will play at ~4x slower framerate than 3.1.2

@thilo.mack can you confirm this? Shall I edit report to these steps?

@iss I can confirm your steps. On my system it behaves the same.

In addition i am still seeing the issues when navigating. But let's concentrate on the things that are reproducible.

If you agree with that approach feel free to update the report.

Thanks!

> In #98989#1378835, @PratikPB2123 wrote: >> I noticed the problem while navigating in the viewport. Orbiting, zooming or translating the camera are all slow. > Also mentioned in other report. Not sure if it would be appropriate to merge both reports. @PratikPB2123 Not sure if that is a question directed at me. I am am fine with whatever helps the development team best. It does seem related to me. > In #98989#1379199, @iss wrote: > My steps: > [#98989.blend](https://archive.blender.org/developer/F13221734/T98989.blend) > > # Open file > # Play animation > > Blender 3.2 will play at ~4x slower framerate than 3.1.2 > > @thilo.mack can you confirm this? Shall I edit report to these steps? @iss I can confirm your steps. On my system it behaves the same. In addition i am still seeing the issues when navigating. But let's concentrate on the things that are reproducible. If you agree with that approach feel free to update the report. Thanks!

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Caused by 80859a6cb2

CC @fclem

Caused by 80859a6cb2 CC @fclem
Philipp Oeser changed title from eevee bad viewport performance with procedural bump map to Regression: eevee bad viewport performance with procedural bump map 2022-07-04 19:07:22 +02:00

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

also currently tangent is always calculated on cpu - this is very slow - could we have the gpu calculate tangents?
(or a checkbox to add this behavior? - theoldben has a addon that makes a node group that does this)

https://github.com/theoldben/BlenderNormalGroups

unsure if working in 3.3x**

also currently tangent is always calculated on cpu - this is very slow - could we have the gpu calculate tangents? (or a checkbox to add this behavior? - theoldben has a addon that makes a node group that does this) https://github.com/theoldben/BlenderNormalGroups unsure if working in 3.3x**

Added subscriber: @Pawel_Harnaz

Added subscriber: @Pawel_Harnaz

I can confirm. Files made with Blender 3.1.2 work much much slower in 3.2, and 3.3 alpha.
Bumpmaps, and displacement maps seem to cause lower framerate in EEVEE.
Pop!_OS 20.04 LTS, nvidia gtx1070.

I can confirm. Files made with Blender 3.1.2 work much much slower in 3.2, and 3.3 alpha. Bumpmaps, and displacement maps seem to cause lower framerate in EEVEE. Pop!_OS 20.04 LTS, nvidia gtx1070.

Added subscriber: @boydmouritsen

Added subscriber: @boydmouritsen

Once again, this same commit 80859a6cb2
Can this please get addressed by someone? I know we don't want to have to deal with it, but clearly something needs to change.

Once again, this same commit 80859a6cb2 Can this please get addressed by someone? I know we don't want to have to deal with it, but clearly something needs to change.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member
                                         master               v3.0                 v3.1                 v3.2                 
T98989                                   0.1061s              0.0676s              0.0677s              0.1037s              

The drop of performance is from 14fps to 9fps (MacMini I5)

Looking at the node graph this is the same cause as described in the comment of #98190.

Bumpmaps could make the cause more visible as the evaluation is run multiple times.

``` master v3.0 v3.1 v3.2 T98989 0.1061s 0.0676s 0.0677s 0.1037s ``` The drop of performance is from 14fps to 9fps (MacMini I5) Looking at the node graph this is the same cause as described in the comment of #98190. Bumpmaps could make the cause more visible as the evaluation is run multiple times.

I think the performance drop increases even more on older (but still supported) hardware. I believe it is a compiler quirk that can likely be fixed if we approach the optimized branch comparisons a tad differently.

I think the performance drop increases even more on older (but still supported) hardware. I believe it is a compiler quirk that can likely be fixed if we approach the optimized branch comparisons a tad differently.

Is this still being worked on?

Is this still being worked on?

Added subscriber: @QBer

Added subscriber: @QBer

In Imac Pro with Radeon Pro Vega 58, I have to use 3.1 as since 3.2 (3.3 LTS same problem) procedural textures are a pain in the ass in shader viewport, so slow to load and in some cases just crashes. It does work after very long time loading.
Still working all fine in Blender 3.1.

In Imac Pro with Radeon Pro Vega 58, I have to use 3.1 as since 3.2 (3.3 LTS same problem) procedural textures are a pain in the ass in shader viewport, so slow to load and in some cases just crashes. It does work after very long time loading. Still working all fine in Blender 3.1.

Added subscriber: @Dankrou

Added subscriber: @Dankrou

I am ready to confirm the existence of a problem. Personally, I just have a huge difference in performance between the option with the Bump node on and off. I use Blender 3.3. Characteristics of my PC: GTX 1080, i7-6700k. GeForce 516.94 Driver, OS Windows 10 64-bits.

I am ready to confirm the existence of a problem. Personally, I just have a huge difference in performance between the option with the Bump node on and off. I use Blender 3.3. Characteristics of my PC: GTX 1080, i7-6700k. GeForce 516.94 Driver, OS Windows 10 64-bits.

In #98989#1415291, @Dankrou wrote:
I am ready to confirm the existence of a problem. Personally, I just have a huge difference in performance between the option with the Bump node on and off. I use Blender 3.3. Characteristics of my PC: GTX 1080, i7-6700k. GeForce 516.94 Driver, OS Windows 10 64-bits.

Turning off the bump node really does work and shader works more or less as use to, with one texture is not a huge problem but in a scene still be a real main problem. Thank you for your help.

> In #98989#1415291, @Dankrou wrote: > I am ready to confirm the existence of a problem. Personally, I just have a huge difference in performance between the option with the Bump node on and off. I use Blender 3.3. Characteristics of my PC: GTX 1080, i7-6700k. GeForce 516.94 Driver, OS Windows 10 64-bits. Turning off the bump node really does work and shader works more or less as use to, with one texture is not a huge problem but in a scene still be a real main problem. Thank you for your help.

Is any one working on this problem? just to know if 3.1 is going to be my last working version for a very long time :(

Is any one working on this problem? just to know if 3.1 is going to be my last working version for a very long time :(
Miguel Pozo self-assigned this 2022-11-08 17:25:32 +01:00
Member
Added subscribers: @brunocb, @VerdeStudios, @sozap, @AndreasResch, @geocentric_wage, @MACHIN3, @Rodrigo_S.T, @kholo, @persun
Member

Added subscribers: @celticsamurai, @mano-wii, @rjg, @OmarEmaraDev

Added subscribers: @celticsamurai, @mano-wii, @rjg, @OmarEmaraDev
Jeroen Bakker changed title from Regression: eevee bad viewport performance with procedural bump map to Regression: Eevee bad performance with procedural bump map. 2022-11-11 09:05:21 +01:00
Jeroen Bakker changed title from Regression: Eevee bad performance with procedural bump map. to Regression: Eevee bad performance when using procedural bump map. 2022-11-11 09:07:59 +01:00

Removed subscriber: @MACHIN3

Removed subscriber: @MACHIN3

This issue was referenced by a84c92fc73

This issue was referenced by a84c92fc73d3298c1456ffb26c1e73cd67b56e6d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Please forgive my lack of knowledge of how this works, but in what release should I spect to find this correction?

Please forgive my lack of knowledge of how this works, but in what release should I spect to find this correction?
Member

You should be able to grab the fix in a fresh 3.4/3.5 build from https://builder.blender.org/download/daily/
(will be added to a 3.3 build later on as well)

You should be able to grab the fix in a fresh 3.4/3.5 build from https://builder.blender.org/download/daily/ (will be added to a 3.3 build later on as well)

In #98989#1446793, @lichtwerk wrote:
You should be able to grab the fix in a fresh 3.4/3.5 build from https://builder.blender.org/download/daily/
(will be added to a 3.3 build later on as well)

Great, Thank you

> In #98989#1446793, @lichtwerk wrote: > You should be able to grab the fix in a fresh 3.4/3.5 build from https://builder.blender.org/download/daily/ > (will be added to a 3.3 build later on as well) Great, Thank you
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98989
No description provided.