Fix T98989: Performance regression when using multiple bump nodes

Ensure each graph material_function only evaluates the input links that are connected to it.

Differential Revision: https://developer.blender.org/D16425